--- a/frontend/pintrest/src/App.css
+++ b/frontend/pintrest/src/App.css
@@ -4,7 +4,11 @@
     padding: 0;
     margin: 0;
     box-sizing: inherit;
+    font-size: 1rem;
 }
 html{
     box-sizing: border-box;
+}
+body{
+    background-color: aquamarine;
 }
