--- a/frontend/pintrest/src/components/Searchbox/Searchbox.css
+++ b/frontend/pintrest/src/components/Searchbox/Searchbox.css
@@ -1,29 +1,26 @@
 #Search-box{
-    flex-grow: 1;
-    border-radius: 3rem;
-    border: 1px solid #dfe1e5;
-    background-color: #f5f5f5;
+    width: 80%;
     display: flex;
-    flex-direction: row;
-    height: 100%;
-    align-content: center;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+    height: 3rem;
+    border-radius: 25px;
+    overflow: hidden;
+    background: #e3e3e3;
 }
 
 #Search-box:hover{
     background-color: #fff;
     box-shadow: 0 1px 6px rgba(32,33,36,.28);
     border-color: rgba(223,225,229,0);
-
 }
-
-
 
 #sb-magnifying-glass{
     margin: auto 0.5rem;
     height: 50%;
 }
 #sb-magnifying-glass svg{
+    padding-left: 0.313rem;
     height: 100%;
     color: gray;
 }
@@ -35,7 +32,6 @@
   flex-grow: 1;
   flex: 100%;
 }
-
 
 #search-input-field
 {
