--- a/frontend/pintrest/src/components/Navbar/Searchbox/Searchbox.module.css
+++ b/frontend/pintrest/src/components/Navbar/Searchbox/Searchbox.module.css
@@ -1,12 +1,13 @@
 #Search-box{
-    width: 80%;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 3rem;
+    height: 100%;
     border-radius: 25px;
+    flex-grow: 1;
     overflow: hidden;
     background: #e3e3e3;
+    margin-left: 1rem;
 }
 
 #Search-box:hover{
@@ -30,11 +31,13 @@
 
 #sb-input-container{
   flex-grow: 1;
-  flex: 100%;
+  height: 100%;
+  margin-right: 0.5rem;
 }
 
 #search-input-field
 {
+    /* background-color: tomato; */
     height: 100%;
     width: 100%;
     outline: none;
