adding the new page History with the option to delete the pin from the history page and we added the serializer

--- a/frontend/pintrest/src/components/Home/Anq-btns.css
+++ b/frontend/pintrest/src/components/Home/Anq-btns.css
@@ -6,6 +6,7 @@
   position: fixed;
   bottom: 100px;
   right: 50px;
+  z-index: 50;
 }
 .question-btn {
   background-color: white;
@@ -15,6 +16,7 @@
   position: fixed;
   bottom: 35px;
   right: 50px;
+  z-index: 50;
 }
 .question-btn:hover {
   background-color: #ddd;
