--- a/frontend/pintrest/src/components/Navbar/Navbar.module.css
+++ b/frontend/pintrest/src/components/Navbar/Navbar.module.css
@@ -3,4 +3,8 @@
     align-items: center;
     padding: 0.938rem;
     height: 5rem;
+    position: sticky;
+    top: 0;
+    background-color: white;
+    z-index: 99999;
 }
