--- a/frontend/pintrest/src/App.css
+++ b/frontend/pintrest/src/App.css
@@ -1,10 +1,13 @@
 @import-normalize;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
+
 
 *,*::before,*::after{
     padding: 0;
     margin: 0;
     box-sizing: inherit;
     font-size: 1rem;
+    font-family: 'Roboto', sans-serif;
 }
 html{
     box-sizing: border-box;
