--- a/frontend/pintrest/src/components/Button/Button.css
+++ b/frontend/pintrest/src/components/Button/Button.css
@@ -17,6 +17,7 @@
     cursor: pointer;
     padding: 15px;
     font-size: 15px;
+    position: relative;
 }
 .btn--standard:hover{
     background-color: var(--hover);
