--- a/frontend/pintrest/src/components/Navbar/Dropdown/Dropdown.module.css
+++ b/frontend/pintrest/src/components/Navbar/Dropdown/Dropdown.module.css
@@ -1,6 +1,58 @@
 .dropdown{
-    background-color: coral;
+    background-color: white;
+    --fnt-clr: black;
+    color: var(--fnt-clr);
+
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    
     position: absolute;
-    top: 100%;
-    right: 100%;
+    top: calc(100% + 0.3rem);
+    right: 0%;
+   
+    height: fit-content; 
+    width: fit-content;
+    border-radius: 5px;
+
+    overflow: hidden;
+    text-align: left;
+
+    box-shadow: 0 0 8px #0002;
+
+    z-index: 10;
+}
+
+.dropdown ul{
+    list-style: none;
+    padding: 0;
+}
+.dropdown li{
+    height: fit-content;
+    /* padding: 0.5rem; */
+    /* border-bottom: 1px solid black;    */
+}
+.dropdown p{
+    margin: 0;
+}
+
+.dropdown li:hover{
+    background-color: #ccc;
+}
+
+.dropdown li > *{
+    padding: 0.5rem
+}
+.dropdown a{
+
+    display: block;
+    width: 100%;
+    height: 100%;
+    color: var(--fnt-clr);
+}
+.dropdown a:visited{
+    color: var(--fnt-clr);
+}
+.dropdown a:active{
+    color: var(--fnt-clr);
 }
