--- a/frontend/pintrest/src/components/Profile/UserInfo.css
+++ b/frontend/pintrest/src/components/Profile/UserInfo.css
@@ -1,25 +1,19 @@
-.container-part{
-    display:flex;
+.container-part {
+  display: flex;
 }
-.row{
-    display:flex;
+.row {
+  display: flex;
 }
 .flex-container {
-
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    -ms-box-orient: horizontal;
-    display: flex;
-    
-    }
-
-
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  -ms-box-orient: horizontal;
+  display: flex;
+}
 
 .wrap {
-
-flex-wrap: wrap;
-
+  flex-wrap: wrap;
 }
 
 /* .wrap li {
@@ -28,39 +22,41 @@ background: gold;
 
 } */
 
-
-
-.flex-item  {
-padding: 5px;
-width: 236px;
-max-height: 400px;
-margin: 10px;
-line-height: 100px;
-text-align: center;
-display:flex;
-
+.flex-item {
+  padding: 5px;
+  width: 236px;
+  max-height: 400px;
+  margin: 10px;
+  line-height: 100px;
+  text-align: center;
+  display: flex;
 }
-.share-edit{
-    display:flex;
-    justify-content: center;
+.share-edit {
+  display: flex;
+  justify-content: center;
 }
-.share-edit button{
-    background-color: #efefef;
-}
-
-.profile-image{
-    width:120px;
-    height:120px;
-    border-radius: 50%;
-    padding-top: 15px;
+.share-edit button {
+  background-color: #efefef;
+  padding: 12px 16px;
+  margin: 5px;
 }
 
-.rounded img{
-    background-color: #efefefea;
-    border-radius: 15px;
-    
+.profile-image {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
 }
-.column-image .secondary-image{
-border:#efefef 1px hidden;
-border-radius: 50%;
+
+.rounded img {
+  background-color: #efefefea;
+  border-radius: 15px;
+}
+.column-image .secondary-image {
+  border: #efefef 1px hidden;
+  border-radius: 50%;
+}
+
+#LegendaryImage:hover {
+  opacity: 0.7;
+  cursor: zoom-in;
 }
