add update and backend and fetch to settings pages

--- a/frontend/pintrest/src/components/Settings/Settings.module.css
+++ b/frontend/pintrest/src/components/Settings/Settings.module.css
@@ -4,11 +4,26 @@
 }
 .sidebarContent {
     height: 100%;
-    width: 30%;
+    width: 50%;
     padding: 2.8rem 0 0 0;
-    overflow: hidden;
-    scroll-behavior: auto;
+    scroll-behavior: smooth;
 }
-.downBar {
-    box-shadow: 0px -5px 10px -5px rgba(100, 100, 111, 0.2) ; 
+@media only screen and (max-width: 576px) {
+    .sidebarContent{
+        margin-left: 30px;
+        width: 80%;
+    }
+    /* // apply the styles here from this minimum width of 
+    // 576px (medium screen sized devices) */
 }
+@media only screen and (min-width: 576px) and (max-width: 850px) {
+    .sidebarContent{
+        width: 75%;
+    }
+	/* // do something in this width range. */
+}
+@media only screen and (min-width: 850px) and (max-width: 1080) {
+    .sidebarContent {
+        width: 75%;
+    }
+  }
