easy to switch between prod and dev now in staging branch

--- a/frontend/pintrest/src/components/Authentication/auth.module.css
+++ b/frontend/pintrest/src/components/Authentication/auth.module.css
@@ -59,6 +59,7 @@
     /* transition: ; */
 }
 .form-container p,.form-container span{
+    display: block;
     text-align: center;
     font-size: small;
 }
