--- a/frontend/pintrest/src/components/Navbar/Searchbox/PinSearchView/PinSearchView.module.css
+++ b/frontend/pintrest/src/components/Navbar/Searchbox/PinSearchView/PinSearchView.module.css
@@ -5,6 +5,7 @@
     grid-template-columns: max-content  auto;
     position: relative;
     height: var(--w);
+    cursor: pointer;
    
 }
 .imagecont{
