--- a/frontend/pintrest/src/components/Profile/UserInfo.css
+++ b/frontend/pintrest/src/components/Profile/UserInfo.css
@@ -58,6 +58,28 @@ background: gold;
 }
 
 #LegendaryImage:hover {
-  opacity: 0.7;
+  opacity: 0.8;
   cursor: zoom-in;
+  filter: alpha(opacity=100);
+  /* background: rgba(0, 0, 0, 0.5); */
 }
+
+.pin:hover .overlay{
+  display: flex;
+  cursor: zoom-in;
+} 
+
+
+.overlay {
+  height: calc(100% - 21px);
+   /* height:100%;  */
+  width: 100%;
+  z-index: 3;
+  background-color: rgb(0 0 0 / 0.3);
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 20px;
+  display: none;
+  flex-direction: column;
+}  
