more of coming soon... and navbar behavior

--- a/frontend/pintrest/src/components/Settings/SideBar/Pages/pages.module.css
+++ b/frontend/pintrest/src/components/Settings/SideBar/Pages/pages.module.css
@@ -282,7 +282,7 @@ input:checked+.slider:before {
   position: fixed;
   bottom: 0;
   right: 50px;
-  z-index: 50;
+  /* z-index: 50; */
   padding-bottom: 10px;
   background-color: white;
 }
