notification and fixed date

--- a/frontend/pintrest/src/components/Navbar/Dropdown/Dropdown.module.css
+++ b/frontend/pintrest/src/components/Navbar/Dropdown/Dropdown.module.css
@@ -29,6 +29,8 @@
 .dropdown ul{
     list-style: none;
     padding: 0;
+    max-height: 350px;
+    overflow: auto;
 }
 .dropdown li{
     height: fit-content;
